wandb/run-20240411_082157-k8un9luw/files/output.log
04-11 08:21:58 model_name: CNN
04-11 08:21:58 Domain: CWRU
04-11 08:21:58 source: CWRU_2
04-11 08:21:58 target: CWRU_3
04-11 08:21:58 data_dir: ./datasets
04-11 08:21:58 train_mode: single_source
04-11 08:21:58 cuda_device: 0
04-11 08:21:58 save_dir: ./ckpt
04-11 08:21:58 max_epoch: 30
04-11 08:21:58 batch_size: 64
04-11 08:21:58 num_workers: 4
04-11 08:21:58 signal_size: 2048
04-11 08:21:58 random_state: 2024
04-11 08:21:58 normlizetype: mean-std
04-11 08:21:58 opt: sgd
04-11 08:21:58 lr: 0.01
04-11 08:21:58 momentum: 0.9
04-11 08:21:58 betas: (0.9, 0.999)
04-11 08:21:58 weight_decay: 0.0005
04-11 08:21:58 lr_scheduler: stepLR
04-11 08:21:58 gamma: 0.2
04-11 08:21:58 steps: 10
04-11 08:21:58 tradeoff: ['exp', 'exp', 'exp']
04-11 08:21:58 dropout: 0.0
04-11 08:21:58 save: False
04-11 08:21:58 load_path: 
04-11 08:21:58 save_path: ./ckpt/CNN/single_source/[CWRU_2]To[CWRU_3]_0411-082158
04-11 08:21:58 Detect 4 classes: ['ball', 'inner', 'normal', 'outer']
Traceback (most recent call last):
  File "train.py", line 90, in <module>
    trainer = importlib.import_module(f"models.{args.model_name}").Trainset(args)
  File "/usr/lib/python3.6/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 994, in _gcd_import
  File "<frozen importlib._bootstrap>", line 971, in _find_and_load
  File "<frozen importlib._bootstrap>", line 955, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 665, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 678, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/workspace/UDA_Bearing_Fault_Diagnosis/models/CNN.py", line 9, in <module>
    from train_utils import InitTrain
  File "/home/workspace/UDA_Bearing_Fault_Diagnosis/train_utils.py", line 121
    wandb.log({"imba": imbalance_ratio)})
                                      ^
SyntaxError: invalid syntax
